<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardElevation="1dp"
    app:cardCornerRadius="0dp"
    style="@style/card_form"
    tools:showIn="@layout/fragment_informacion_solicitante">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/estadoCivilSolicitante"
                android:id="@+id/txtEstadoCivil"

                />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/lblTrabajaConyuge"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/trabajoConyugeSolicitante" />

        <RadioGroup
            android:id="@+id/rgTrabajaConyuge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/afirmativo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/afirmativoSolicitante" />

            <RadioButton
                android:id="@+id/negativo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:text="@string/negativoSolicintente"
                android:textColorLink="@android:color/white" />
        </RadioGroup>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ingresoConyugeSolicitante"
                android:inputType="numberDecimal"
                android:id="@+id/txtIngresoConyuge"

                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/regimenConyugalSolicitante"
                android:id="@+id/txtRegimen" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/lblDependientes"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/dependientesConyugeSolicitante" />

        <RadioGroup
            android:id="@+id/rgDependientes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/afirmativoDependientes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/afirmativoDependientesSolicitante" />

            <RadioButton
                android:id="@+id/negativoDependientes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:text="@string/negativoDependientesSolicitante"
                android:textColorLink="@android:color/white" />
        </RadioGroup>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/numeroPersonasSolicitante"
                android:inputType="numberSigned"
                android:id="@+id/txtNumeroPersonas"

                />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>