<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="32dp">
    <ImageView
        android:layout_width="180dp"
        android:layout_height="130dp"
        android:src="@drawable/ic_logomi"
        android:layout_gravity="center"
        />

    <TextView
        android:id="@+id/lblTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_marginTop="16dp"
        android:textColor="@color/colorPrimary"
        android:textAlignment="center"
        android:text="@string/welcome" />

    <TextView
        android:id="@+id/lblUsuario"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        android:textColor="@color/colorPrimary"
        android:textAlignment="center"
        android:visibility="gone"
        android:text="@string/user" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/layout_user"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_person_black_24dp"
            android:layout_gravity="center"/>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_user"
                android:id="@+id/txtUsuario"
                />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_lock_black_24dp"
            android:layout_gravity="center"/>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:id="@+id/txtPassword"
                android:inputType="textPassword"
                />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:indeterminateDrawable="@drawable/circular_progress_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:progress="10"
        android:visibility="gone"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:layout_marginTop="32dp"
        android:textColor="@color/colorWhite"
        android:background="@color/colorPrimary"
        android:id="@+id/btnIniciar"
        />
    <TextView
        android:id="@+id/lblCerrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:textAlignment="center"
        android:layout_marginTop="32dp"
        android:text="@string/sign_out" />
    <ImageView
        android:id="@+id/logoMaster"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:src="@drawable/master_logo"
        android:layout_gravity="right|bottom"
        android:contentDescription="@string/name"/>
</LinearLayout>